--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   },
   "homepage": "https://github.com/moneyforward/brakeman-action#readme",
   "dependencies": {
-    "@moneyforward/sca-action-core": "0.0.1"
+    "@moneyforward/sca-action-core": "0.0.2"
   },
   "devDependencies": {
-    "@zeit/ncc": "^0.22.1"
+    "@types/node": "^13.13.2",
+    "@typescript-eslint/eslint-plugin": "^2.29.0",
+    "@typescript-eslint/parser": "^2.29.0",
+    "@zeit/ncc": "^0.22.1",
+    "eslint": "^6.8.0",
+    "typescript": "^3.8.3"
   }
 }
