--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@moneyforward/sca-action-core": "0.0.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
+    "@types/mocha": "^7.0.2",
     "@types/node": "^13.13.2",
     "@typescript-eslint/eslint-plugin": "^2.29.0",
     "@typescript-eslint/parser": "^2.29.0",
     "@zeit/ncc": "^0.22.1",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
+    "mocha": "^7.1.1",
+    "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
   }
 }
