--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Analyze code statically using Brakeman in Github actions",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test",
+    "version": "gulp clean build && git add dist",
+    "start": "gulp build && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,7 +34,9 @@
     "@typescript-eslint/parser": "^2.29.0",
     "@zeit/ncc": "^0.22.1",
     "chai": "^4.2.0",
+    "del": "^5.1.0",
     "eslint": "^6.8.0",
+    "gulp": "^4.0.2",
     "mocha": "^7.1.1",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
