--- a/action.yml
+++ b/action.yml
@@ -25,7 +25,7 @@ inputs:
     required: false
 runs:
   using: 'node12'
-  main: 'dist/index.js'
+  main: 'dist/action/index.js'
 branding:
   icon: 'search'
   color: 'orange'
